--- a/serverless-video-site/lambda/video-transcoder/package.json
+++ b/serverless-video-site/lambda/video-transcoder/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "aws-sdk": "^2.3.2"
   },
-  "author": "Peter Sbarski",
+  "author": "",
   "license": "BSD-2-Clause",
   "devDependencies": {
     "run-local-lambda": "^1.1.0"
