--- a/serverless-video-site/lambda/custom-authorizer/package.json
+++ b/serverless-video-site/lambda/custom-authorizer/package.json
@@ -12,7 +12,7 @@
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
   },
-  "author": "Peter Sbarski",
+  "author": "",
   "license": "BSD-2-Clause",
   "devDependencies": {
     "run-local-lambda": "^1.0.0"
