--- a/serverless-video-site/website/package.json
+++ b/serverless-video-site/website/package.json
@@ -10,7 +10,7 @@
     "start": "ws",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Peter Sbarski",
+  "author": "",
   "license": "BSD-2-Clause",
   "devDependencies": {
     "local-web-server": "^1.1.0"
